UPD. refactor path and cache key
