# handlers/health_check.go
@@ -7,7 +7,7 @@ import "github.com/gofiber/fiber/v2"
 // @Accept       text/html
 // @Produce      text/html
 // @Success      200  {string} string "OK"
-// @Router       /health [get]
+// @Router       /api/ethereum-auth/health [get]
 func HealthCheckHandler(c *fiber.Ctx) error {
 	return c.SendString("OK")
 }
