# handlers/version.go
@@ -7,7 +7,7 @@ import "github.com/gofiber/fiber/v2"
 // @Accept       text/html
 // @Produce      text/html
 // @Success      200  {string} string "respond current service version ex: 1.0.1"
-// @Router       /version [get]
+// @Router       /api/ethereum-auth/version [get]
 func VersionHandler(appVersion string) func(c *fiber.Ctx) error {
 	return func(c *fiber.Ctx) error {
 		return c.SendString(appVersion)
